[package]
name = "ev-dice"
description = "computes the min, max, and expected value of D&D-like dice rolls"
homepage = "http://github.com/gnuvince/ev"
version = "0.4.0"
authors = ["Vincent Foley <vfoley@gmail.com>"]
license = "MIT"

[dependencies]
regex = "0.1.71"
getopts = "0.2.14"
lazy_static = "0.2.8"

[[bin]]
name = "ev"
