[package]
name = "ev-dice"
description = "Unix utility to compute the min, max, and expected value of a D&D-like dice roll"
homepage = "http://github.com/gnuvince/ev"
version = "0.4.1"
authors = ["Vincent Foley <vfoley@gmail.com>"]
license = "MIT"

[dependencies]
regex = "0.1.71"
getopts = "0.2.14"
lazy_static = "0.2.8"

[[bin]]
name = "ev"
