[package]
name = "ev-dice"
description = "Unix utility to compute the min, max, and expected value of a D&D-like dice roll"
homepage = "http://github.com/gnuvince/ev"
version = "0.5.0"
authors = ["Vincent Foley <vfoley@gmail.com>"]
license = "MIT"

[dependencies]
getopts = "0.2.14"

[[bin]]
name = "ev"
